app/assets/stylesheets/application/content_items.css.sass
// Place all the styles related to the content_items controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

$content_margin_left: 40px
$content_item_margin_bottom: 20px

.activity-body,
.content-item-body
  h1, h2, h3, h4, h5
    font-size: 16px
  p
    margin: 10px 0 0 0
  blockquote
    p
      font-size: inherit
      font-weight: inherit
      line-height: inherit

.activity-body
  p:first-child
    margin: 0

.spacer
  padding-top: 20px
  hr
    border: none
    border-bottom: 1px solid white
    border-top: 1px solid #DAD8D4
    opacity: 0.3
    margin: 0

.content-items
  position: relative
  margin: 0

.content-item
  .move-handle
    visibility: hidden

.sortable > .content-item
  &.ui-sortable-helper > .content-item-wrapper > .move-handle,
  &:hover > .content-item-wrapper > .move-handle,
  &.ui-sortable-helper > .content-item-wrapper > .content-item-options,
  &:hover > .content-item-wrapper > .content-item-options,
  .content-item-options.open
    visibility: visible

.content-items > .content-item
  &:hover > .content-item-wrapper > .content-item-options,
  .content-item-options.open
    visibility: visible


.content-item
  background-color: white
  position: relative
  margin: 0
  padding-top: $content_item_margin_bottom

  .content-item
    padding-top: 0

  .content-item-wrapper
    padding: 0
    margin: 0

  .content-item-options
    visibility: hidden

  .move-handle
    background: url(/assets/move-content-item.png) center center no-repeat
    display: block
    position: absolute
    z-index: 11000
    text-align: center
    width: 20px
    height: 32px
    top: 0
    margin-left: 10px
    &:hover
      cursor: move

  .content-item-options
    position: absolute
    z-index: 10000
    top: 0
    right: 10px

    .nav-pills
      li
        a.dropdown-toggle
          padding-left: 6px
          padding-right: 6px
          .caret
            margin-left: 0

  .content-item-inner
    position: relative
    padding-left: $content_margin_left
    padding-right: 30px
    //padding: 10px 10px 10px 0

    .content-item-body
      .content-items
        margin-left: -$content_margin_left
        

    .content-item-info
      color: #ccc
      a
        color: inherit

  .content-item-details
    opacity: 0
    height: 0
    overflow: hidden
    small
      display: block
      border-top: 1px solid #EEE
      color: #aaa


.add-content-item-form
  ul.nav-tabs,
  div.tab-content
    margin-bottom: 0
    margin-left: $content_margin_left / 2
    padding-left: $content_margin_left / 2
    margin-right: $content_margin_left

    li
      a
        padding-bottom: 5px
  ul.nav-tabs
    border-bottom: none
    li
      a:hover,
      &.active a
        border-color: transparent
        background: transparent
        text-decoration: underline
  .tab-pane
    background: url(/assets/add-content-item-form-arrow.png) 4px top repeat-x
    padding-top: 7px
    .inner-tab-pane
      border: 1px solid #ddd
      border-top: none
      border-left-color: #bbb


  .form-wrapper,
  .content-item-form-wrapper
    border-radius: 0
    background: transparent
    padding: 0
    margin: 0

    form
      margin-bottom: 0
      background: transparent
      border-radius: 0
      border: none
      -webkit-box-shadow: none
      -moz-box-shadow: none
      box-shadow: none

    form,
    .control-group,
    .form-actions
      margin: 0!important
      padding: 0
    .form-actions
      padding: 5px
      background: #f5f5f5
      .btn
        float: right
        margin-left: 5px
        margin-bottom: 0
      .cancel
        display: none

